Fix Conflation with relations. Standard distance
Rewrote ConflationMatchCommand to avoid problems when conflated
primitives are members of relations.
(delete class ReplaceGeometryOnlyCommand which was a bad idea afterall)

Add "Standard Distance" matcher, which makes more sense than "Centroid"
when matching nodes to ways.

Simplify build.xml
Cleanup some compilation warnings.